--- a/roles/database/tasks/get_info.yml
+++ b/roles/database/tasks/get_info.yml
@@ -7,7 +7,8 @@
     namespace: "{{ meta.namespace }}"
     name: "{{ database_name }}"
   register: databases_result
-- fail:
+- name: check results
+  fail:
     msg: "database {{ database_name }} not found"
   when: "databases_result.resources | length != 1"
 - debug:
