--- a/roles/jobs/tasks/create_cron_job.yml
+++ b/roles/jobs/tasks/create_cron_job.yml
@@ -1,17 +1,7 @@
-- name: ensure no old version of cron job
-  k8s:
-    state: absent
-    api_version: batch/v1beta1
-    kind: CronJob
-    name: "pg-backup-cronjob-{{ meta.name }}"
-    namespace: "{{ meta.namespace }}"
-  when: desired_state != "present"
-# doing this at the same point in time that create_job does it
 - name: ensure scripts
   include_role:
     name: jobs
     tasks_from: ensure_scripts
-  when: desired_state == "present"
 - name: create cron job
   k8s:
     state: "{{ desired_state }}"
@@ -19,10 +9,9 @@
       apiVersion: batch/v1beta1
       kind: CronJob
       metadata:
-        name: pg-backup-cronjob
+        name: "pg-backup-{{ job_action }}-{{ meta.name }}"
         namespace: "{{ meta.namespace }}"
       spec:
         schedule: "{{ cron_interval }}"
         jobTemplate:
           spec: "{{ job_spec }}"
-  when: desired_state == "present"
