--- a/roles/postgresuser/tasks/create.yml
+++ b/roles/postgresuser/tasks/create.yml
@@ -24,5 +24,5 @@
     name: postgresuser
     tasks_from: create_user_item
   vars:
-    item: item
+    database_item: item
   loop: "{{ databases | dict2items }}"
