--- a/roles/postgresuser/tasks/drop.yml
+++ b/roles/postgresuser/tasks/drop.yml
@@ -8,7 +8,7 @@
     login_user: "{{ item.value.admin_user_name }}"
     state: absent
   loop: "{{ databases | dict2items }}"
-  when: databases | lenght > 0
+  when: databases | length > 0
 - name: Connect to host, drop user (if no grants at all)
   postgresql_user:
     port: "{{ item.value.port }}"
@@ -17,4 +17,4 @@
     login_host: "{{ item.value.address }}"
     login_user: "{{ item.value.admin_user_name }}"
     state: absent
-  when: databases | lenght == 0
+  when: databases | length == 0
