after action sql

--- a/deploy/crds/postgres.kabisa.nl_database_restore_job_crd.yaml
+++ b/deploy/crds/postgres.kabisa.nl_database_restore_job_crd.yaml
@@ -30,3 +30,5 @@ spec:
             file_name:
               type: string
               minimum: 1
+            after_action_sql:
+              type: string
