--- a/deploy/crds/postgres.kabisa.nl_database_backup_job_crd.yaml
+++ b/deploy/crds/postgres.kabisa.nl_database_backup_job_crd.yaml
@@ -28,3 +28,5 @@ spec:
               type: string
             az_blobs_user:
               type: string
+            after_action_sql:
+              type: string
