--- a/deploy/crds/postgres.kabisa.nl_database_copy_job_crd.yaml
+++ b/deploy/crds/postgres.kabisa.nl_database_copy_job_crd.yaml
@@ -26,3 +26,5 @@ spec:
             to_database_name:
               type: string
               minimum: 1
+            after_action_sql:
+              type: string
