--- a/roles/jobs/tasks/remove_job.yml
+++ b/roles/jobs/tasks/remove_job.yml
@@ -10,3 +10,10 @@
     kind: Job
     name: "{{ job_name }}"
     namespace: "{{ meta.namespace }}"
+- name: remove sql configmap
+  k8s:
+    api_version: v1
+    state: absent
+    kind: ConfigMap
+    name: "pg-{{ job_action }}-job-{{ meta.name }}-sql-scripts"
+    namespace: "{{ meta.namespace }}"
