--- a/roles/jobs/tasks/remove_job.yml
+++ b/roles/jobs/tasks/remove_job.yml
@@ -2,7 +2,11 @@
 #    var: job_spec
 - name: generate name
   set_fact:
-    job_name: "pg-{{ job_action }}-{{ meta.name }}"
+    job_name: "pg-{{ job_action }}-{{ job_type }}-{{ meta.name }}"
+    sql_script_name: "pg-{{ job_action }}-{{ job_type }}-{{ meta.name }}-sql-scripts"
+- name: dbg
+  debug:
+    var: job_name
 - name: remove job
   k8s:
     api_version: batch/v1
@@ -15,5 +19,5 @@
     api_version: v1
     state: absent
     kind: ConfigMap
-    name: "pg-{{ job_action }}-job-{{ meta.name }}-sql-scripts"
+    name: "{{ sql_script_name }}"
     namespace: "{{ meta.namespace }}"
