--- a/roles/jobs/tasks/ensure_scripts.yml
+++ b/roles/jobs/tasks/ensure_scripts.yml
@@ -6,7 +6,7 @@
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: pg-backup-scripts
+        name: pg-operator-scripts
         namespace: "{{ meta.namespace }}"
       data:
         backup_postgres.sh: |
