added databasename as parameter of backup

--- a/roles/jobs/tasks/container_def_pg_dump.yml
+++ b/roles/jobs/tasks/container_def_pg_dump.yml
@@ -19,6 +19,7 @@
           value: "{{ from_database.pg_database_name }}"
       command:
         - "/scripts/backup_postgres.sh"
+        - "{{ from_database.pg_database_name }}"
       volumeMounts:
         - name: scripts
           mountPath: /scripts
