allow for setting filename in backup job

--- a/deploy/crds/postgres.kabisa.nl_database_backup_job_crd.yaml
+++ b/deploy/crds/postgres.kabisa.nl_database_backup_job_crd.yaml
@@ -30,3 +30,5 @@ spec:
               type: string
             after_action_sql:
               type: string
+            file_name:
+              type: string
