--- a/roles/jobs/tasks/ensure_scripts.yml
+++ b/roles/jobs/tasks/ensure_scripts.yml
@@ -14,7 +14,7 @@
           pg_dump \
               --format=custom \
               --compress=9 \
-              --file=/pgdump/${1:-db}_`date +%Y%m%d%H%M`.dump \
+              --file=/pgdump/${1:-"$DATABASE"_"`date +%Y%m%d%H%M`.dump"} \
               --no-owner \
               --no-acl \
               --host=$PGHOST \
